<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="player_1">Player 1</string>
    <string name="enter_name">Enter name…</string>
    <string name="player_2">Player 2</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="view_xo_image_content_description">x or o image</string>
    <string name="sound_on">sound on</string>
    <string name="scoreboard"><u>Scoreboard</u></string>
    <string name="play_again">Play Again</string>\

    <!-- Board Piece Tags -->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>

</resources>