<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.dapzthelegend.game.xo.XOViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/board"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/xo_board_height"
            android:weightSum="@integer/xo_board_weight_sum"
            android:layout_margin="@dimen/xo_board_layout_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="@integer/xo_board_piece_layout_weight"
                android:layout_height="@dimen/xo_board_linear_layout_width"
                android:weightSum="@integer/xo_board_weight_sum"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_0"
                    app:tint="@color/white"
                    app:image="@{viewModel.gameManager.game[0][0]}"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />
                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_1"
                    app:tint="@color/white"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    app:image="@{viewModel.gameManager.game[0][1]}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />
                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_2"
                    app:tint="@color/white"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    app:image="@{viewModel.gameManager.game[0][2]}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="@integer/xo_board_piece_layout_weight"
                android:layout_height="0dp"
                android:weightSum="@integer/xo_board_weight_sum"
                android:baselineAligned="false"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_3"
                    app:tint="@color/white"
                    app:image="@{viewModel.gameManager.game[1][0]}"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />
                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_4"
                    app:tint="@color/white"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    app:image="@{viewModel.gameManager.game[1][1]}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />
                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_5"
                    app:tint="@color/white"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    app:image="@{viewModel.gameManager.game[1][2]}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="@integer/xo_board_piece_layout_weight"
                android:layout_height="@dimen/xo_board_linear_layout_height"
                android:weightSum="@integer/xo_board_weight_sum"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_6"
                    app:tint="@color/white"
                    app:image="@{viewModel.gameManager.game[2][0]}"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />
                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_7"
                    app:tint="@color/white"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    app:image="@{viewModel.gameManager.game[2][1]}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />
                <ImageView
                    android:layout_width="@dimen/xo_board_linear_layout_width"
                    android:layout_height="match_parent"
                    android:layout_weight="@integer/xo_board_piece_layout_weight"
                    android:tag="@string/_8"
                    android:onClick="@{(view) -> viewModel.onBoardClicked(view)}"
                    app:image="@{viewModel.gameManager.game[2][2]}"
                    android:contentDescription="@string/view_xo_image_content_description"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="NestedWeights" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>